# fastapi-example

./: .dockerignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt
apps/api/: app.py
apps/v1/: app.py  deps.py
apps/v1/endpoints/: openai.py  openai_mock.py
core/: constant.py  errors.py  middleware.py  res.py  tools.py
dto/: __init__.py  openai_schema.py
